# Multimodal-Depression-Risk-Estimation

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_api.py  run_demo.py
src/mde/: __init__.py  runtime.py
src/mde/api/: server.py
src/mde/core/: interfaces.py  types.py
src/mde/models/: audio_encoder.py  fusion.py  hf_api_asr.py  hf_api_audio_encoder.py  hf_api_text_encoder.py  hf_api_visual_encoder.py  multimodal_encoder.py  text_encoder.py  visual_encoder.py
src/mde/services/: pipeline.py  policy.py  response.py
src/mde/utils/: math_utils.py  vision_pipeline.py
tests/: test_pipeline.py  test_response.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  styles.css
web/src/components/: ChatSidebar.jsx  Composer.jsx  MessageList.jsx
web/src/lib/: api.js
